--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -24,6 +24,9 @@ h1 {
   padding: 10px;
 }
 
+h2{
+  text-align: center;
+}
 .box {
   max-width: 400px;
   margin: 50px auto;
@@ -81,7 +84,42 @@ button {
   padding-bottom: 6px;
   border-width: 0;
 }
+
+
 .button1 {
+  min-height: 50px;
+  width: 200px;
+  border-color: transparent;
+	box-shadow: 3px 4px 0px 0px :#A683E3;
+	background:linear-gradient(to bottom, #A683E3 5%,  #d6bcd6 100%);
+	background-color:#A683E3;
+	border-radius:15px;
+	border:1px solid #d6bcd6;
+	display:inline-block;
+	cursor:pointer;
+	color:#fff;
+	font-family:Arial;
+	font-size:20px;
+	padding:7px 25px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #e1e2ed;
+  padding-bottom: 6px;
+  border-width: 0;
+  margin-left: 300px;
+  margin-top: 50px;
+}
+.button1:hover {
+	background:linear-gradient(to bottom, #d6bcd6 5%, #A683E3 100%);
+	background-color:#d6bcd6;
+}
+.button1:active {
+	position:relative;
+	top:1px;
+}
+.navbar{
+  background-color: #A683E3;
+}
+/* .button1 {
   min-height: 50px;
   width: 200px;
   border-radius: 50%;
@@ -93,6 +131,13 @@ button {
   border-width: 0;
   margin-left: 300px;
   margin-top: 50px;
+} */
+.buttonDel {
+
+  font-size: 15px;
+  min-height: 30px;
+  width: 30px;
+
 }
 
 /* input[type="text"] {
