--- a/views/header.ejs
+++ b/views/header.ejs
@@ -6,9 +6,16 @@
 
 
   <title>Learn English</title>
-  
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-<link rel="stylesheet" href="css/styles.css">
+<link rel="stylesheet" href="/css/styles.css">
+  <link rel="icon" href="/images/favicon.ico">
 </head>
 
 <body>
+  <!-- Image and text -->
+<nav class="navbar navbar-light " >
+  <a class="navbar-brand" href="/">
+    <img src="/images/logo.png" width="100"  class="d-inline-block align-top" alt="">
+      </a>
+</nav>
