--- a/views/home.ejs
+++ b/views/home.ejs
@@ -11,7 +11,7 @@
     </div>
     <div class="col">
 
-    <a href="/verbs">     <button class="button1" type="button" name="button" >Check Your Knowledge 🤓</button></a>
+    <a href="/verbs">     <button class=" button1" type="button" name="button" >Check Your Knowledge 🤓</button></a>
 
     </div>
   </div>
@@ -27,7 +27,7 @@
         <th scope="col">V1</th>
         <th scope="col">V2</th>
         <th scope="col">V3</th>
-        <th scope="col">Delete a verb😢</th>
+        <th scope="col">Delete a verb</th>
       </tr>
     </thead>
     <tbody>
@@ -42,11 +42,27 @@
         <td><%=item.v2%></td>
         <td><%=item.v3%></td>
         <td>
+
+
           <form action="/delete" method="post">
+
+
+
+<button class="buttonDel" type="submit" name="buttonDelete" onclick="return confirm('Are you sure you want to delete this verb?');" value="<%=item._id%>" >❌</button>
+
+
+
+
+
+
+
+          </form>
+
+          <!-- <form action="/delete" method="post">
 
               <input type="checkbox" name="checkbox" value="<%=item._id%>" onChange="this.form.submit()">
 
-          </form>
+          </form> -->
           </td>
       </tr>
 
@@ -67,5 +83,44 @@
   <button type="submit" name="verb" value="">+</button>
 </form>
 
+
+
+<table class="table table-bordered ">
+  <thead>
+    <tr>
+      <th scope="col">רשימת הכתבות</th>
+  <th scope="col">מחק הכתבה</th>
+
+    </tr>
+  </thead>
+
+  <tbody>
+<%  newDictations.forEach(function(item){ %>
+
+
+<% if (item.name !="Favicon.ico"){   %>
+
+    <tr>
+      <td>
+      <a href="/<%=item.name%>" >  <%=item.name%></a></td>
+      <td>
+
+
+        <form action="/deleteDictation" method="post">
+
+
+
+<button class="buttonDel" type="submit" name="buttonDelete" onclick="return confirm('בטוח למחוק את ההכתבה?');" value="<%=item._id%>" >❌</button>
+
+        </form>
+
+        </td>
+
+    </tr>
+<%}%>
+<%  }) %>
+  </tbody>
+</table>
+</div>
 
 <%- include("footer") -%>
